ghc-4335c07/testsuite/tests/rename/should_compile/T2506.hs
-- Trac #2506

module ShouldCompile where
import Control.Exception (assert)

foo = True `assert` ()
