ghc-4335c07/testsuite/tests/rename/should_fail/rnfail053.hs
-- Test Trac #2114 (error message)

module ShouldFail where

data T = forall a. MkT a

